<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.backupcd.MainActivity" >

    <item
        android:id="@+activity_principal/mnCadastro"
        android:orderInCategory="100"
        android:title="@string/mnCadastro"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_input_add"
        />
    
    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/mnPesquisa"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"/>
    
    <item
        android:id="@+activity_principal/mnSobre"
        android:orderInCategory="100"
        android:title="@string/mnSobre"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+activity_principal/mnSair"
        android:orderInCategory="100"
        android:title="@string/mnSair"
        app:showAsAction="ifRoom"/>

</menu>
