<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/fundo_app" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        style="@style/fundo_interno_app">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_lbnummidia"
            style="@style/label" />

        <TextView
            android:id="@+id/txtNumMidia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/atributo" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_lbtipo"
            style="@style/label" />

        <TextView
            android:id="@+id/txtTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/atributo" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_lbdescricao"
            style="@style/label" />

        <TextView
            android:id="@+id/txtDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/atributo" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_lbconteudo"
            style="@style/label"  />

        <TextView
            android:id="@+id/txtConteudo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/atributo" />
    </LinearLayout>

</LinearLayout>