<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/fundo_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/fundo_interno_app"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_lbnummidia"
            style="@style/label" />

        <TextView
            android:id="@+id/txtnumero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/atributo" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbtipo"
            style="@style/label" />

        <TextView
            android:id="@+id/txttipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/atributo" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbdescricao"
            style="@style/label" />

        <TextView
            android:id="@+id/txtdescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/atributo" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_lbconteudo"
            style="@style/label" />

        <EditText
            android:id="@+id/edconteudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            style="@style/atributo" />
    </LinearLayout>

</LinearLayout>